# TSKB03-Teknik-Avancerade-Datorspel

./: .gitignore  CMakeLists.txt  README.md  lab4
Labbar/Lab0/: CMakeLists.txt  compileScript  lab0  lab0.c  lab0.frag  lab0.vert  spotLight.frag  spotLight.vert
Labbar/Lab0/src/: lab0  lab0.c  lab0.vert
Labbar/lab1-1/: combine.frag  combine.vert  compileScript  lab1-1  lab1-1.c  lowpass.frag  lowpassx.frag  lowpassy.frag  phong.frag  plaintextureshader.frag  truncation.frag  truncation.vert
Labbar/lab1-2/: compileScript  lab1-2  lab1-2.c  lab1-2.frag
Labbar/lab2/: compileScript  run1  run2  shader.vert  shader2.vert  skinning  skinning.c  skinning1  skinning2  skinning2.c
Labbar/lab3/: lab3  lab3.c  run
Labbar/lab4/: SpriteLight.h  lab4  lab4.c  makefile  run
